--- a/Assignments/kareem_elassad_A01/assets/css/style.css
+++ b/Assignments/kareem_elassad_A01/assets/css/style.css
@@ -37,9 +37,10 @@ header p {
 /* main article styling */
 main {
   background-color: white;
-  margin: 0% 15%;
-  margin: 0em 4em 0.25em 15em;
+  /* margin: 0% 15%; */
+  margin: 0;
   padding: 1em;
+  /* width: 100%; */
 }
 
 section {
@@ -110,18 +111,20 @@ label img {
   /* margin: 0; */
   background-color: white;
   width: 100%;
-  border: solid 0.5px black;
-  font-size: 0.7rem;
+  border: solid 0.5px grey;
 }
 
 summary {
   padding-top: 0.5em;
   padding-left: 0.5em;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .p-post {
-  padding: 3%;
+  padding: 0px 15px 15px 15px;
   color: #7986cb;
+  font-size: 1rem;
 }
 
 .input-post {
@@ -132,4 +135,100 @@ summary {
 .align-table {
   width: 100%;
   white-space: nowrap;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: blue;
+  color: white;
+}
+li a:active {
+  background-color: green;
+  color: white;
+}
+
+td.navbar {
+  /* alight items to top of td */
+  vertical-align: top;
+  /* center items */
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+.main-table {
+  /* add padding to the sides */
+  padding: 0 4em;
+}
+
+.textbox {
+  /* add padding to sides */
+  padding: 5px 0 0 15px;
+}
+
+td.align-table {
+  /* align items to textarea */
+  padding-left: 15px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  /* set element size to half */
+  width: 60%;
+}
+td.align-table2 {
+  /* align items to textarea */
+  padding-left: 0px;
+}
+
+.section-post {
+  display: block;
+  text-align: justify;
+}
+
+.avatars {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.align-avatars {
+  position: relative;
+  top: 0.5em;
+  float: none;
+}
+
+input.s-r-buttons {
+  margin: 0;
+  padding: 0;
+  align-items: left;
+}
+table.button-spacing {
+  margin: 0px;
+  padding: 0px;
+}
+
+.align-body {
+  padding-left: 20px;
+}
+
+form input[type="submit"] {
+  margin: 0px 10px 0px 0px;
+}
+
+select {
+  background-color: #dddcde;
 }
